tests/errors/ty_errors/ty_errors.c
#error ty_errors.ty_errors:3:1 Type mismatch: 'int' <> 'unit'.
#error ty_errors.ty_errors:6:24 Type mismatch: 'string' <> 'int'.
#error ty_errors.ty_errors:12:17 Recursive type occurred while unifying '{?12}@ty_errors.ty_errors:12:13' to '{?10}@ty_errors.ty_errors:12:3 -> {?18}@ty_errors.ty_errors:12:17'.
#error ty_errors.ty_errors:12:17 Arity mismatch: expected ((_) -> _, ..) -> .., but was _.
